--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "personalRM Node API",
   "main": "src/app.js",
   "scripts": {
-    "test": "npm test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/kodesandbox/personalRMService#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
